--- a/src/app/Pages/index/index.page.html
+++ b/src/app/Pages/index/index.page.html
@@ -6,9 +6,38 @@
       </ion-button>
     </ion-buttons>
     <ion-title>Index</ion-title>
+    
   </ion-toolbar>
+  
 </ion-header>
 
 <ion-content>
-
+<!-- Background image -->
+<div id="intro" class="bg-video shadow-1-strong">
+  <video class="video-class"  autoplay muted loop>
+    <source class="source-class" src="../../../assets/bg2.mp4" type="video/mp4" />
+  </video>
+  <div class="index-text container d-flex align-items-center justify-content-center text-center h-100">
+    <div class="text-white index-text__box">
+      <h1 class="mb-3">Bienvenido a ChatApp</h1>
+      <h5 class="mb-4">Un sitio desarrollado para ALED 3</h5>
+      <div class="buttons">
+        <a
+          class="btn btn-outline-light btn-reg btn-lg m-2"
+          [routerLink]="['/register']"
+          role="button"
+          rel="nofollow"
+          >Registrate</a
+        >
+        <a
+          class="btn btn-outline-light btn-chat btn-lg m-2"
+          [routerLink]="['/chat']"
+          role="button"
+          >Ingresa al chat</a
+        >
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Background image -->
 </ion-content>
